# unspec-dash

./: .dockerignore  .gitignore  README.md  WOC_IMPLEMENTATION_PLAN.md  WOC_MASTER_DOCUMENT.md  WOC_PROPOSAL.md  WOC_SYSTEM_SPEC.md  debug_paths.py  docker-compose.yml  maintenance.sh  run_bare_metal.sh  task.md
FEB 2026/: LAPORAN UNSPEC HD 01 FEBRUARI 2026.xlsx  LAPORAN UNSPEC HD 02 FEBRUARI 2026.xlsx  LAPORAN UNSPEC HD 03 FEBRUARI 2026.xlsx  LAPORAN UNSPEC HD 04 FEBRUARI 2026.xlsx  (+15 more)
backend/: Dockerfile  create_tables.py  database.py  debug_ticket.py  gpon_network.db  import_april_reports.py  import_historical_reports.py  local_export_reports.py  main.py  migrate_phase2.py  migrate_remaining.py  migrate_to_postgres.py  migration_reports.json  pyproject.toml  seed.py  set_webhook.py
backend/debug_files/: UnspecSemesta_TREG 6 - WITEL BALIKPAPAN(Total Saldo Unspec).xlsx  debug_status_kurma.py  inspect_excel.py  inspect_hi_sheet.py  ukurmassal.xlsx
backend/middleware/: auth_middleware.py
backend/migrations/: env.py
backend/models/: __init__.py  attendance.py  network.py  report.py  team.py  ticket.py  user.py
backend/routers/: __init__.py  auth.py  bot_telegram.py  dashboard.py  data_explorer.py  data_import.py  report.py  system.py  tickets.py  users.py
backend/services/: __init__.py  auth_service.py  bot_attendance_methods.py  bot_location_methods.py  bot_service.py  bot_wizard_methods.py  real_data_service.py
backend/utils/: __init__.py  data_import.py  excel_import.py  excel_parser.py  import_real_data.py  security_helpers.py  status_logic.py
(+58 files in other folders)
